--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -5,3 +5,18 @@
 #__next {
   @apply flex flex-col min-h-screen;
 }
+
+.prose code::before,
+.prose code::after {
+  content: '';
+}
+.prose code {
+  color: #d14;
+  background-color: #f7f7f9;
+  border: 1px solid #e1e1e8;
+  padding: 2px 4px;
+}
+.prose pre {
+  color: #f8f8f2;
+  background-color: #1E1E1E;
+}
